--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,13 @@ body{
 
 .slotmachine{
   background-color: whitesmoke;
-  border: 2px solid black;
+  border: 1px ;
   margin: 4rem 6rem 4rem 6rem;
  
+}
+
+.slotmachine{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 
